Fix avatar size on mobile

--- a/src/pages/index/index.module.css
+++ b/src/pages/index/index.module.css
@@ -21,10 +21,14 @@
 .teamlistmember {
   color: inherit;
   flex-grow: 0;
-  padding: 0 1rem 2rem;
+  padding: 0 1% 2%;
 }
 
 .teamlistmember:hover img {
   transform: scale(1.05);
   transition-duration: 75ms;
+}
+
+.teamlistmember img {
+  --ifm-avatar-photo-size: calc(max(50px,min(100vw/6,96px)));
 }
